--- a/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
+++ b/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
@@ -402,7 +402,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="RRJ-v0-wnC">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="44" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SpeakerCell" id="pAu-jx-IFN" customClass="SpeakerTableViewCell">
@@ -460,14 +460,31 @@
                                     <outlet property="delegate" destination="r0G-qC-orY" id="vOb-o9-qBq"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" barStyle="black" placeholder="Speaker Name, Company or Job" translatesAutoresizingMaskIntoConstraints="NO" id="xaT-ef-cGZ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <color key="barTintColor" red="0.18039215689999999" green="0.18039215689999999" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                <connections>
+                                    <outlet property="delegate" destination="r0G-qC-orY" id="iJb-08-QDz"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="xaT-ef-cGZ" firstAttribute="leading" secondItem="d2A-Zf-CBM" secondAttribute="leading" id="BUe-Do-iM4"/>
+                            <constraint firstAttribute="trailing" secondItem="xaT-ef-cGZ" secondAttribute="trailing" id="DzD-Xe-plW"/>
+                            <constraint firstItem="xaT-ef-cGZ" firstAttribute="top" secondItem="zbT-uW-fEp" secondAttribute="bottom" id="G9X-la-hcs"/>
                             <constraint firstItem="RRJ-v0-wnC" firstAttribute="top" secondItem="zbT-uW-fEp" secondAttribute="bottom" id="M98-UI-SLq"/>
                             <constraint firstItem="Ly7-HE-mQ4" firstAttribute="top" secondItem="RRJ-v0-wnC" secondAttribute="bottom" id="NVw-2C-zrO"/>
                             <constraint firstItem="RRJ-v0-wnC" firstAttribute="leading" secondItem="d2A-Zf-CBM" secondAttribute="leading" id="Nhf-Zk-JRO"/>
                             <constraint firstAttribute="trailing" secondItem="RRJ-v0-wnC" secondAttribute="trailing" id="h0y-KP-h3t"/>
+                            <constraint firstItem="RRJ-v0-wnC" firstAttribute="top" secondItem="xaT-ef-cGZ" secondAttribute="bottom" id="kr3-em-X0w"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="M98-UI-SLq"/>
+                            </mask>
+                        </variation>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="Speakers" id="GpF-kv-CTN">
@@ -477,11 +494,22 @@
                     </navigationItem>
                     <connections>
                         <outlet property="buttonMenu" destination="Ehe-fn-VMM" id="0mx-3t-fwg"/>
+                        <outlet property="iboSearchBar" destination="xaT-ef-cGZ" id="XBx-XF-kqj"/>
+                        <outlet property="iboTableView" destination="RRJ-v0-wnC" id="nwL-Fe-WfB"/>
+                        <outlet property="searchDisplayController" destination="d9a-ML-typ" id="IuM-fC-ezl"/>
                         <outlet property="tableView" destination="RRJ-v0-wnC" id="jhK-qj-jsM"/>
                         <segue destination="2KC-IV-ZOA" kind="show" identifier="SpeakerSegue" id="aTD-GC-86D"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OpW-WO-osv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="d9a-ML-typ">
+                    <connections>
+                        <outlet property="delegate" destination="r0G-qC-orY" id="tKx-Zv-bjh"/>
+                        <outlet property="searchContentsController" destination="r0G-qC-orY" id="dFa-Bj-7ei"/>
+                        <outlet property="searchResultsDataSource" destination="r0G-qC-orY" id="vE8-oM-bVD"/>
+                        <outlet property="searchResultsDelegate" destination="r0G-qC-orY" id="gvR-Ff-ysg"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="-532" y="-2024"/>
         </scene>
@@ -1522,8 +1550,8 @@
         <image name="speaker_0.png" width="126" height="138"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LGa-vG-AbV"/>
-        <segue reference="miU-PP-23E"/>
         <segue reference="WJ5-Q1-sZF"/>
+        <segue reference="LGa-vG-AbV"/>
+        <segue reference="aTD-GC-86D"/>
     </inferredMetricsTieBreakers>
 </document>
