--- a/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
+++ b/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
@@ -463,6 +463,7 @@
                             </tableView>
                             <searchBar contentMode="redraw" barStyle="black" placeholder="Speaker Name, Company or Job" translatesAutoresizingMaskIntoConstraints="NO" id="xaT-ef-cGZ">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <color key="tintColor" red="0.87450980392156863" green="0.34509803921568627" blue="0.12156862745098039" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="barTintColor" red="0.18039215689999999" green="0.18039215689999999" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                 <connections>
@@ -1037,7 +1038,7 @@
                                                     <rect key="frame" x="20" y="16" width="20" height="20"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Organizers" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDb-60-uLA">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sponsors" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDb-60-uLA">
                                                     <rect key="frame" x="58" y="16" width="158" height="21"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -1384,10 +1385,10 @@
             </objects>
             <point key="canvasLocation" x="-1861" y="-1165"/>
         </scene>
-        <!--Organizers-->
+        <!--Sponsors-->
         <scene sceneID="RRk-yp-xFE">
             <objects>
-                <viewController id="sSG-EA-mA9" customClass="OrganizersViewController" sceneMemberID="viewController">
+                <viewController id="sSG-EA-mA9" customClass="SponsorsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6g3-yz-cwv"/>
                         <viewControllerLayoutGuide type="bottom" id="Anw-yU-Zvi"/>
@@ -1396,48 +1397,56 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="YaZ-Sn-wBY">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Che-de-cKu">
+                                <rect key="frame" x="8" y="8" width="584" height="520"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="OrganizersCell" id="CzA-iN-Vng" customClass="OrganizersTableViewCell">
-                                        <rect key="frame" x="0.0" y="22" width="600" height="70"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CzA-iN-Vng" id="4U2-U6-23G">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="69"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vL6-ye-8yP">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SponsorCell" id="ywh-Na-NxH" customClass="SponsorCollectionViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1BX-r8-M8p" userLabel="LogoImage">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="69"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eTE-K2-MN1">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                                 </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="1BX-r8-M8p" firstAttribute="leading" secondItem="4U2-U6-23G" secondAttribute="leading" id="Ki2-zb-kda"/>
-                                                <constraint firstAttribute="bottom" secondItem="1BX-r8-M8p" secondAttribute="bottom" id="L0w-Db-Q5w"/>
-                                                <constraint firstItem="1BX-r8-M8p" firstAttribute="top" secondItem="4U2-U6-23G" secondAttribute="top" id="QGl-qB-UCG"/>
-                                                <constraint firstAttribute="trailing" secondItem="1BX-r8-M8p" secondAttribute="trailing" id="tjf-ce-5NC"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="eTE-K2-MN1" secondAttribute="bottom" id="9Ou-Op-K5a"/>
+                                            <constraint firstAttribute="trailing" secondItem="eTE-K2-MN1" secondAttribute="trailing" id="LuF-8I-YAV"/>
+                                            <constraint firstItem="eTE-K2-MN1" firstAttribute="top" secondItem="ywh-Na-NxH" secondAttribute="top" id="aG0-r6-Q1J"/>
+                                            <constraint firstItem="eTE-K2-MN1" firstAttribute="leading" secondItem="ywh-Na-NxH" secondAttribute="leading" id="efZ-fJ-3bn"/>
+                                        </constraints>
                                         <connections>
-                                            <outlet property="logoImageView" destination="1BX-r8-M8p" id="Y5V-9U-xAg"/>
+                                            <outlet property="iboImageView" destination="eTE-K2-MN1" id="BPo-1W-8jH"/>
                                         </connections>
-                                    </tableViewCell>
-                                </prototypes>
+                                    </collectionViewCell>
+                                </cells>
                                 <connections>
-                                    <outlet property="dataSource" destination="sSG-EA-mA9" id="NIV-7c-eIn"/>
-                                    <outlet property="delegate" destination="sSG-EA-mA9" id="4tm-SY-Zhb"/>
+                                    <outlet property="dataSource" destination="sSG-EA-mA9" id="wQS-Qm-Xlq"/>
+                                    <outlet property="delegate" destination="sSG-EA-mA9" id="ju8-sL-nt3"/>
                                 </connections>
-                            </tableView>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="YaZ-Sn-wBY" secondAttribute="trailing" id="8iT-8E-4Gm"/>
-                            <constraint firstItem="Anw-yU-Zvi" firstAttribute="top" secondItem="YaZ-Sn-wBY" secondAttribute="bottom" id="LDD-Zv-8R8"/>
-                            <constraint firstItem="YaZ-Sn-wBY" firstAttribute="leading" secondItem="IS3-Nz-dYS" secondAttribute="leading" id="XlX-dJ-zzG"/>
-                            <constraint firstItem="YaZ-Sn-wBY" firstAttribute="top" secondItem="6g3-yz-cwv" secondAttribute="bottom" id="kJT-Xb-oYW"/>
+                            <constraint firstAttribute="trailing" secondItem="Che-de-cKu" secondAttribute="trailing" constant="8" id="AvO-nJ-TKX"/>
+                            <constraint firstItem="Che-de-cKu" firstAttribute="top" secondItem="6g3-yz-cwv" secondAttribute="bottom" constant="8" id="c5C-4J-B2t"/>
+                            <constraint firstItem="Che-de-cKu" firstAttribute="leading" secondItem="IS3-Nz-dYS" secondAttribute="leading" constant="8" id="yDZ-xc-a3D"/>
+                            <constraint firstItem="Anw-yU-Zvi" firstAttribute="top" secondItem="Che-de-cKu" secondAttribute="bottom" constant="8" id="yVD-QP-pl3"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Organizers" id="KhG-qi-5yL">
+                    <navigationItem key="navigationItem" title="Sponsors" id="KhG-qi-5yL">
                         <barButtonItem key="leftBarButtonItem" image="ic_drawer.png" id="KqK-Qe-5Qn">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </barButtonItem>
@@ -1445,12 +1454,12 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
                         <outlet property="buttonMenu" destination="KqK-Qe-5Qn" id="ghI-NE-0XV"/>
-                        <outlet property="tableView" destination="YaZ-Sn-wBY" id="vu7-C6-7Ha"/>
+                        <outlet property="iboCollectionView" destination="Che-de-cKu" id="vLn-Zp-5OX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yHW-xX-JF4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1379" y="-3511"/>
+            <point key="canvasLocation" x="-1354" y="-3506"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2oJ-PE-TI7">
@@ -1553,8 +1562,8 @@
         <image name="speaker_0.png" width="126" height="138"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cVm-aZ-C91"/>
-        <segue reference="LGa-vG-AbV"/>
+        <segue reference="WJ5-Q1-sZF"/>
         <segue reference="aTD-GC-86D"/>
+        <segue reference="LGa-vG-AbV"/>
     </inferredMetricsTieBreakers>
 </document>
